@@ -1,3 +1,8 @@
+2001-05-10  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m-e21.el (w3m-insert-image): Remove `face' property from a text
+	behind an image.
+
 2001-05-10  Hideyuki SHIRAI  <shirai@meadowy.org>
 
 	* w3m.el:
